--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.inhatc.walkin_map">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />  <!--권한요청-->
+    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />  --><!--권한요청-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -30,8 +31,10 @@
 
         <activity
             android:name=".FinderActivity2"
-            android:exported="false"
-            android:label="@string/title_activity_finder2" />
+            android:exported="true"
+            android:label="@string/title_activity_finder2" >
+
+        </activity>
         <activity
             android:name=".UserActivity"
             android:exported="false" />
@@ -53,7 +56,9 @@
             android:label="@string/title_activity_maps"></activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true" >
+
+        </activity>
     </application>
 
 </manifest>
